GNOME Bugzilla – Bug 650362
brasero won't let me make 1:1 copy to .iso into small /home partition
Last modified: 2015-05-23 18:49:55 UTC
By default, brasero wants to name your iso file /home/USER/DISK_TITLE.iso when making a 1:1 copy to an iso. However if that default location is too small, you get the following message: "Please choose another CD or DVD or insert a new one. The data size is too large for the disc even with the overburn option." and the Properties button next to the image file location is disabled. So even though I have a 200GB partition available for storage, I can't choose to use it since my /home partition is too small. I think the Properties button should be available, same notification, and just the Create Image button should be unavailable until the user has chosen a valid location.
Seconded. I myself am experiencing this bug at the moment, and it is OVERWHELMINGLY frustrating! I have TERABYTES worth of storage available, and I might as well not have Brasero installed at all. I basically CANNOT use Brasero AT ALL because of this bug. PLEASE do something!
I've just pushed a fix to master which should resolve this issue: https://git.gnome.org/browse/brasero/commit/?id=6d6ff976dca4644b19521fc42638ccc23e5e0742
*** Bug 668405 has been marked as a duplicate of this bug. ***
*** Bug 676281 has been marked as a duplicate of this bug. ***
*** Bug 666108 has been marked as a duplicate of this bug. ***
(In reply to Joshua Lock from comment #2) > I've just pushed a fix to master which should resolve this issue: (...) I know bugzilla is not a support forum but are you sure that this bug was fixed completely? I'm using Gnome 3.14 with Brasero 3.12 but I'm facing the same issue. Actually the "properties" button is enabled but the action button ("create image") is disabled even though there is enough space on the selected drive.