brasero-burn-options: don't disable the Properties button for image files

Several users have reported problems when trying to make a 1:1 copy of a
disc to a hard drive when they have a small amount of free space in their
home directory.

Ensure that the Properties button is never desensitised for fake drives so
that the user can always choose an alternative location.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=650362